--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 </head>
 <body>
     
-    
+    <p>PARAGRAFO</p>
+
+    <div>DIV</div>
+
+    <h1>H1</h1>
+
+    <button>BUTTON</button>
+
 </body>
 </html>
