--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
     <title>Html-Sass-first</title>
     <link rel="stylesheet" href="dist/app.css">
 </head>
+
 <body>
-    
-    <p>PARAGRAFO</p>
 
-    <div>DIV</div>
+    <div>
 
-    <h1>H1</h1>
+        <p>PARAGRAFO</p>
 
-    <button>BUTTON</button>
+        <h1>H1</h1>
+
+        <button>BUTTON</button>
+
+    </div>
 
 </body>
+
 </html>
